# log_forwarder

./: CMakeLists.txt  LICENSE  README.rst
include/logfwd/: logfwd.hpp
level0/: level0.cpp
level1/: level1.cpp
level2/: level2.cpp
scripts/: build_demo.sh  build_test.sh
src/: Logger.h  logfwd.cpp
